Replaced test account and added new page

--- a/src/test/java/resources/conf.properties
+++ b/src/test/java/resources/conf.properties
@@ -1,4 +1,4 @@
 loginpage = https://passport.yandex.ru/auth
 chromedriver = /Users/victoriavv/Downloads/chromedriver
-login = victorynail2015
-password = 2411Dfcz
+login = torryTest
+password = 123456Qw
